Fix overflow text issue in SideBar

--- a/src/components/SideBar/CollectionTitle/CollectionTitle.css
+++ b/src/components/SideBar/CollectionTitle/CollectionTitle.css
@@ -5,6 +5,4 @@
   text-transform: uppercase;
   font-size: 8px;
   letter-spacing: 0.05em;
-  padding: 0px 30px;
-  word-wrap: break-word;
 }
